# SPH3d

./: .gitignore  BallInVacuum.cpp  CMakeLists.txt  Cell.cpp  Cell.h  Common.cpp  Common.h  CompareFiles.cpp  CompareFiles.h  DustyShock1d.cpp  DustyShock1d.h  Dusty_shock.cpp  Dusty_shock.h  Grid.cpp  Grid.h  InitStates.cpp  InitStates.h  NonLinear.cpp  NonLinear.h  Numbered.cpp  Numbered.h  Params.h  Particle.cpp  Particle.h  ParticlesState.cpp  ParticlesState.h  Point.cpp  Point.h  SodTube3d.cpp  SodTube3d.h  Solver.cpp  Solver.h  Viscosity.h  compare  main.cpp  run_cmake_linux.sh  run_cmake_win.cmd  utils.cpp
sources/: BallInVacuum.cpp  BallInVacuum.h  Cell.cpp  Cell.h  Common.cpp  Common.h  CompareFiles.cpp  DustyShock.cpp  DustyShock1d.cpp  DustyShock1d.h  Dusty_shock.cpp  Dusty_shock.h  Grid.cpp  InitStates.cpp  InitStates.h  NonLinear.cpp  Params.h  Particle.h  SPHSolver.cpp  SPHSolver.h  SPHSolverRunner.cpp  SPHTestsRunner.cpp  SodTube1d.cpp  SodTube1d.h  SodTube3d.cpp  SodTube3d.h  Solver.cpp  Solver.h  Viscosity.cpp  Viscosity.h  main.cpp  utils.h
sources/base/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  MathUtils.cpp  MathUtils.h  Numbered.cpp  Particle.cpp  Particle.h  Point.cpp  Point.h  Viscosity.cpp
sources/settings/: CompareFiles.h  Params.h
sources/solvers/: BallInVacuum.h  SPHSolver.cpp  SPHSolver.h  SodTube3d.cpp
sources/tests/: BallInVacuum.cpp  DustyShock.cpp  DustyShock.h  DustyShock1d.cpp  DustyShock1d.h  InitStates.cpp  NonLinear.cpp  NonLinear.h  SodTube1d.cpp  SodTube1d.h  SodTube3d.cpp  SodTube3d.h  Solver.cpp  Solver.h  Viscosity.h  main.cpp
